# loghop

./: .bandit.yml  .editorconfig  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  DISCUSSIONS_SETUP.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SOCIAL_PREVIEW_CHECKLIST.md  dependabot.yml  release-drafter.yml  welcome.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: all-contributors.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  release-drafter.yml  release-rehearsal.yml  release.yml  stale.yml  welcome.yml
docs/: _config.yml  compatibility.md  demo.md  editorial-voice.md  getting-started.md  index.md  operations.md  robots.txt  tui.md
docs/_layouts/: default.html  landing.html
docs/explanation/: comparison.md  how-it-works.md  security-model.md
docs/how-to/: release.md  switch-providers.md  troubleshooting.md
docs/img/demo/: demo-mp4.tape  demo.tape  tui-demo.tape
docs/reference/: commands.md  configuration.md  exit-codes.md
examples/: README.md  basic-usage.sh  ci-integration.sh  provider-switch.py
scripts/: e2e_user_flow.py  logo_preview.py  release_check.sh  smoke_published.sh  smoke_release.py
src/loghop/: __main__.py  autocapture.py  cli.py  cli_parser.py  env.py  errors.py  gittools.py  logging.py  providers.py  reconcile.py  redact.py  resilience.py  session_lifecycle.py  terminal.py
src/loghop/cli_commands/: _admin_completion.py  _admin_doctor.py  _admin_init.py  _admin_providers.py  _admin_uninstall.py  _dashboard_no_args.py  _handoff_launch.py  _helpers.py  (+22 more)
tests/: conftest.py  test_add_folder.py  test_admin.py  test_admin_uninstall.py  test_annotate.py  test_annotate_sessions.py  test_audit_fixes.py  test_autocapture.py  test_autocapture_block_fastpath.py  test_claude_shell_env_ttl.py  test_cli.py  test_cli_and_tui_utils.py  test_cli_error_paths.py  test_cli_parser.py  test_confirm_modal.py  test_constants.py  test_dashboard.py  test_dashboard_no_args.py  test_dashboard_projects.py  test_drift.py  test_e2e_user_flow_script.py  test_enhancements.py  test_frontmatter.py  test_gittools.py  test_gittools_mocks.py  test_goal.py  test_handoff.py  test_handoff_launch.py  test_handoff_store.py  test_home_screen.py  test_home_vm.py  test_hook.py  test_install.py  test_install_cli.py  test_install_features.py  test_install_units.py  test_integrity_key.py  test_journal.py  test_launcher.py  test_launcher_safety.py  (+49 more)
(+62 files in other folders)
