[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loghop"
dynamic = ["version"]
description = "Switch AI coding assistants without starting over"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Ruleh", email = "ruleh@proton.me" },
]
keywords = ["cli", "git", "handoff", "codex", "claude"]
urls = { Homepage = "https://github.com/elruleh/loghop", Repository = "https://github.com/elruleh/loghop", Issues = "https://github.com/elruleh/loghop/issues", Changelog = "https://github.com/elruleh/loghop/blob/main/CHANGELOG.md" }
dependencies = [
    "rich>=14,<15",
    "tomli-w>=1.0.0,<2",
    "pyyaml>=6.0.1,<7",
    "cryptography>=49.0.0",
]
optional-dependencies.tui = [
    "textual>=2,<3",
]
optional-dependencies.dev = [
    "build>=1.2",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0.12.20260408",
    "bandit[toml]>=1.7",
    "pip-audit>=2.6",
    "pre-commit>=3.7",
    "twine>=5",
    "anyio>=4.13.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
loghop = "loghop.cli:cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
loghop = ["tui/styles/*.tcss"]

[tool.setuptools.dynamic]
version = { attr = "loghop.__version__" }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PERF401", "RUF010", "RET504", "RUF100", "BLE001", "T201", "RUF012", "ERA001", "PLR2004"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "ERA001"]
"scripts/**" = ["T201"]
"examples/**" = ["T201"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
    "slow: tests that exercise the Textual app via Pilot (>=2s per test)",
]

[tool.coverage.run]
source = ["src/loghop"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_unused_configs = true
pretty = true
strict = true

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20260408",
    "vulture>=2.16",
]
